src/objects/Service__c.object
<CustomObject>
    <description>This is the high level family of a service provided to a customer under a contract (e.g. Water, Sewerage, Electricity, Gas etc.)</description>
    <fields>
        <fullName>AvailableService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Available Service object</description>
        <label>Available Service</label>
        <referenceTo>AvailableService__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipName>Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Device object</description>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reading__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Reading object</description>
        <label>Reading</label>
        <referenceTo>Reading__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceEndDate__c</fullName>
        <description>Date field, the latest End Date of a Service Item. Master-detail for Contract and Service object. Park for now</description>
        <label>Service End Date</label>
        <summarizedField>ServiceItem__c.EndDate__c</summarizedField>
        <summaryForeignKey>ServiceItem__c.Service__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ServiceStartDate__c</fullName>
        <description>Date field, the earliest Start Date of a Service Item. Master-detail for Contract and Service object. Park for now</description>
        <label>Service Start Date</label>
        <summarizedField>ServiceItem__c.StartDate__c</summarizedField>
        <summaryForeignKey>ServiceItem__c.Service__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Service Type object</description>
        <label>Service Type</label>
        <referenceTo>ServiceType__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SupplyPoint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Supply Point object</description>
        <label>Supply Point</label>
        <referenceTo>SupplyPoint__c</referenceTo>
        <relationshipLabel>Services</relationshipLabel>
        <relationshipName>Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>